# Persevere

./: .clang-format  .clang_complete  .gitignore  CMakeLists.txt  Makefile  build.bat  todo.txt
assets/: basic.frag  basic.vert  border.frag  border.vert  fbo.frag  fbo.vert  light.frag  light.vert  shader.frag  shader.vert  shadowcaster.frag  shadowcaster.vert
include/: array.h  asset.h  bitset.h  components.h  dynlib.h  ecs.h  ecs_handles.h  engine.h  fbo.h  file.h  game.h  game_core.h  log.h  map.h  memory.h  mixer.h  nerd.h  nerd_array.h  nerd_asset.h  nerd_bitset.h  nerd_dict.h  nerd_dynlib.h  nerd_echo.h  nerd_engine.h  nerd_file.h  nerd_log.h  nerd_map.h  nerd_math.h  nerd_memory.h  nerd_mixer.h  nerd_renderer.h  nerd_shader.h  nerd_sparse_set.h  nerd_string.h  nerd_typedefs.h  platform.h  platform_audio.h  platform_dll.h  platform_window.h  renderer.h  (+8 more)
include/allocators/: allocator.h  linear_allocator.h
include/assets/: shader_asset.h  sound_asset.h  texture_asset.h
include/components/: body_component.h  light_component.h  quad_component.h  (+8 more)
shaders/: fragment.glsl  vertex.glsl
src/: array.c  asset.c  bitset.c  common.h  courage.cpp  courage.h  dynamic_library.c  dynamic_library.cpp  dynlib.c  ecs.c  engine.c  engine_callbacks.h  entity.h  fbo.c  file.c  game.c  game_core.c  game_core.cpp  game_core.h  map.c  mixer.c  mixer.h  nerd.c  nerd.h  nerd_array.c  nerd_array.h  nerd_asset.c  nerd_bitset.c  nerd_bitset.h  nerd_dict.c  nerd_dict.h  nerd_dynlib.c  nerd_dynlib.h  nerd_echo.c  nerd_echo.h  nerd_file.c  nerd_file.h  nerd_map.c  nerd_math.c  nerd_math.h  (+29 more)
(+24 files in other folders)
